# exp_cov

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  environment-minimal.yml
src/exp_cov_2/: package.xml  setup.cfg  setup.py
src/exp_cov_2/config_templates/: exp_cov_run.yaml  exp_cov_test.yaml
src/exp_cov_2/exp_cov_2/: distance_check.py  laser_scan_check.py  logged_run.py  nav_stack_listener.py
src/exp_cov_2/maps_rgb_lab/: legendaColori.txt
src/exp_cov_2/scripts/: log_from_bag.py  map_rgb_simul.py  opt_viz.py  optimization_data.py  runner.py  solve.py  tsp.py
src/exp_cov_2/worlds/: rectangles_2.json  rectangles_4.json  rectangles_6.json  rectangles_7.json  rectangles_8.json  world1.world  world2.world  world4.world  world5.world  world7.world  world8.world
src/exp_cov_2/worlds.bak/: rectangles_0.json  rectangles_1.json  rectangles_3.json  rectangles_5.json  rectangles_9.json  world0.world  world3.world  world6.world  world9.world
src/exp_cov_2/worlds2/: world0.world  world1.world  world10.world  world11.world  world12.world  world13.world  world14.world  world15.world  world16.world  world17.world  world18.world  world19.world  world2.world  world20.world  world21.world  world22.world  world23.world  world24.world  world25.world  world26.world  world27.world  world28.world  world29.world  world3.world  world30.world  world31.world  world32.world  world33.world  world34.world  world35.world  world36.world  world37.world  world38.world  world39.world  world4.world  world40.world  world41.world  world42.world  world43.world  world44.world  (+60 more)
(+204 files in other folders)
