<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exp_cov_2</name>
  <version>0.0.1</version>
  <description>ROS2 port of exp_cov by Davide Bertalero (d-ber)</description>
  <maintainer email="pierrebrd7@gmail.com">pierre</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
